Added 'copyFromFile' support to webdav.

BUG: 334192
FIXED-IN: 4.14.2
REVIEW: 120418